--- a/style.css
+++ b/style.css
@@ -1,1 +1,43 @@
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  margin-left: 30px;}
+  
+.contact-info {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  margin-left: 30px;}
+
+h4{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  margin-left: 30px;}
+
+.diff {color: #cc2121}
+.email {color: #3b62ff}
+h4 {color: #23d3d9;
+    font-size: 24px;
+  font-family: Halvetica, Arial, Sans-serif;}
+
+.employer {font: bold 20px Andale Mono, monospace;}
+.edu {font: bold 20px Andale Mono, monospace;}
+
+body {font-family: Andale Mono, monospace}
+
+.name {
+  text-align: center;
+}
+
+.name {color: solid black;
+    font-size: 35px;
+    text-shadow: 0 0 3px #23d3d9, 0 0 5px #23d3d9;}
+
+
+body {
+  background-color: gray;
+}
+ 
 
