--- a/style.css
+++ b/style.css
@@ -14,16 +14,24 @@ h4{
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 30px;
-  margin-left: 30px;}
+  margin-left: 30px;
+  text-decoration-line: underline;
+  text-decoration-style: solidb;}
+
+.school {font: bold 20px Andale Mono, monospace;
+    text-decoration-line: underline;
+    text-decoration-style: solid;}
 
 .diff {color: #cc2121}
-.email {color: #3b62ff}
+.email {color: #0000d6}
 h4 {color: #23d3d9;
     font-size: 24px;
   font-family: Halvetica, Arial, Sans-serif;}
 
-.employer {font: bold 20px Andale Mono, monospace;}
-.edu {font: bold 20px Andale Mono, monospace;}
+.employer {font: bold 20px Andale Mono, monospace;
+    text-decoration-line: underline;
+    text-decoration-style: solid;} 
+
 
 body {font-family: Andale Mono, monospace}
 
@@ -38,9 +46,9 @@ body {font-family: Andale Mono, monospace}
 body {
   background-color: gray;
 
- 
-background-color: #757575;
+ background-color: #757575;
   background-image: url("https://www.transparenttextures.com/patterns/cardboard.png");}
+
 
 .name {
   width: 1000px;
@@ -54,3 +62,5 @@ background-color: #757575;
   from {background-color: gray;}
   to {background-color: lightgray;}
   
+h4 {text-decoration-line: underline;
+    text-decoration-style: solid;}
